--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Погодная станция андроид</string>
     <string name="textTV1">Ответ!</string>
+    <string name="textTV2">Response!</string>
     <string name="btUpdate">Обновить!</string>
 </resources>
