Created a procedure for transferring data from JSON to an array.
Создал виджет SensorView. Добавил его в activity_main.xml. Нарисовал текст и две линии.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="textTV1">Ответ!</string>
     <string name="textTV2">Response!</string>
     <string name="btUpdate">Обновить!</string>
+    <string name="btUpgrade">Отрисовать!</string>
 </resources>
